--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
@@ -32,7 +32,7 @@
         </div>
 
     </div>
-    <script type="text/javascript" src="/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
