started work on panel options

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <header id="header1">digmole.eu</header>
+    <header id="header1">dimo.one</header>
     <header id="header2">/dashboard</header>
     <div id="dashboard">
         <div id="newPanel" onclick="newPanel();">
