--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-7035417033818986",
+          enable_page_level_ads: true
+     });
+</script>
 </head>
 
 <body>
