--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
+    
+    <header id="header2">dashboard</header>
     <header id="header1">dimo.one</header>
-    <header id="header2">/dashboard</header>
     <div id="dashboard">
         <div id="newPanel" onclick="newPanel();">
             <svg id="icon_add" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 384">
